--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,74 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-sky-200;
-}
-
 @layer base {
   :root {
     /* For hsl(198deg 93% 60% / <alpha-value>) */
     --color-highlight: 259deg 100% 65%;
     --color-light-red: 0deg 100% 65%;
   }
+}
+
+@layer components {
+  body {
+    font-family: 'Poppins';
+    @apply bg-gray-100;
+  }
+  label {
+    @apply flex flex-col uppercase text-xs font-bold flex-1 md:flex-grow-0 w-[22%] text-gray-500 tracking-widest;
+  }
+  input {
+    @apply border-gray-400 border-[1px] text-black leading-[3rem] sm:leading-[55px] rounded-lg text-base sm:text-3xl pl-4 mt-2 focus:border-gray-800 placeholder-slate-500;
+  }
+}
+
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+    url('/src/assets/fonts/Poppins-Bold.ttf')
+      format('truetype');
+}
+
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 700;
+  src: local(''),
+    url('/src/assets/fonts/Poppins-BoldItalic.ttf')
+      format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: local(''),
+    url('/src/assets/fonts/Poppins-ExtraBold.ttf')
+      format('truetype');
+}
+
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 900;
+  src: local(''),
+    url('/src/assets/fonts/Poppins-ExtraBoldItalic.ttf')
+      format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+    url('/src/assets/fonts/Poppins-Regular.ttf')
+      format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 400;
+  src: local(''),
+    url('/src/assets/fonts/Poppins-Italic.ttf')
+      format('truetype');
 }
